# exray_sdk

./: CONTRIBUTING.md  README.md
docs/: FAQ.md  ROS_Topics.md
examples/: package.xml  setup.py
examples/examples/: linear_square_path_demo.py  rotating_square_motion_demo.py
examples/launch/: linear_square_path_demo.launch.py  rotating_square_motion_demo.launch.py
exray_ros_messages/: CMakeLists.txt  package.xml
exray_ros_messages/action/: FocusCalibration.action
exray_ros_messages/msg/: Accelerometer.msg  Accuracy.msg  AttitudeTarget.msg  CameraSteppersParameters.msg  ControlState.msg  CurrentFocusStamped.msg  CurrentTiltStamped.msg  CurrentZoomStamped.msg  DvlBeam.msg  DvlDeadReckoning.msg  DvlVelocity.msg  ExternalPressure.msg  FocalDistanceCalibrated.msg  FocusCommand.msg  Gyroscope.msg  Heartbeat.msg  ImageQualityParameters.msg  ImuBiasWithCovariance.msg  ImuOrientation.msg  JoystickCommand.msg  Magnetometer.msg  MultiPoseSonarScan.msg  PositionTarget.msg  PressureBiasWithCovariance.msg  SonarEcho.msg  Submap.msg  TakePictureCommand.msg  ToggleRecordingCommand.msg  TransformBetweenScans.msg  UsblPing.msg  VideoBitrate.msg  VideoOverlay.msg
exray_ros_messages/srv/: GetCameraSteppersParameters.srv  SetCameraSteppersParameters.srv
